<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="15dp"
    android:background="@drawable/layout_config">

    <EditText
        android:id="@+id/edit_local_url"
        android:layout_width="300dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:digits="@string/edit_url_type"
        android:maxLines="1"
        android:textSize="13sp"
        android:hint="@string/text_local_url" />

    <EditText
        android:id="@+id/edit_net_url"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/edit_local_url"
        app:layout_constraintStart_toStartOf="@id/edit_local_url"
        app:layout_constraintEnd_toEndOf="@id/edit_local_url"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:digits="@string/edit_url_type"
        android:maxLines="1"
        android:textSize="13sp"
        android:hint="@string/text_net_url" />

    <EditText
        android:id="@+id/edit_authorize_change_url"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintTop_toBottomOf="@id/edit_net_url"
        app:layout_constraintStart_toStartOf="@id/edit_net_url"
        app:layout_constraintEnd_toEndOf="@id/edit_net_url"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:digits="@string/edit_verification_type"
        android:maxLines="1"
        android:textSize="13sp"
        android:hint="@string/edit_authorize_change_url" />

    <Button
        android:id="@+id/butt_config"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/edit_local_url"
        app:layout_constraintEnd_toEndOf="@id/edit_local_url"
        app:layout_constraintTop_toBottomOf="@id/edit_authorize_change_url"
        android:layout_marginTop="25dp"
        android:background="@drawable/butt_config"
        android:text="@string/butt_config"
        android:textColor="@android:color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>