<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img_account"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="@id/edit_email"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_hand_big"/>

    <EditText
        android:id="@+id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="320dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/edit_verification"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/edit_verification"
        android:maxLines="1"
        android:digits="@string/edit_verification_type"
        android:textSize="15sp"/>


    <TextView
        android:id="@+id/text_verification"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/edit_verification"
        app:layout_constraintBottom_toBottomOf="@id/edit_email"
        android:layout_marginBottom="15dp"
        android:text="@string/text_verification"
        android:textColor="@color/text_verification"/>

    <TextView
        android:id="@+id/text_verify"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/edit_verification"
        app:layout_constraintBottom_toBottomOf="@id/edit_verification"
        android:layout_marginBottom="15dp"
        android:text="@string/text_verify"
        android:textColor="@color/text_password_forget"/>


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_verification"
        android:layout_marginTop="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="gone"
        android:hint="@string/edit_password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/edit_password_second"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        android:layout_marginTop="25dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:visibility="gone"
        android:hint="@string/edit_password_second"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/text_back_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_verification"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/text_back_login"
        android:textSize="12sp"
        android:text="@string/text_back_login"/>

    <Button
        android:id="@+id/butt_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_password_second"
        android:layout_marginTop="35dp"
        android:visibility="gone"
        android:background="@drawable/butt_login"
        android:text="@string/text_register"
        android:textColor="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>