<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_constrain_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/edit_account"
        app:layout_constraintStart_toStartOf="@id/edit_account"
        app:layout_constraintEnd_toEndOf="@id/edit_account"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_idles"/>

    <EditText
        android:id="@+id/edit_account"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="300dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:hint="@string/edit_account"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/img_remember"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="@id/edit_account"
        app:layout_constraintBottom_toBottomOf="@id/edit_account"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_account"/>

    <ImageView
        android:id="@+id/img_clear"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toEndOf="@id/edit_account"
        app:layout_constraintBottom_toBottomOf="@id/edit_account"
        android:layout_marginBottom="13dp"
        android:src="@drawable/ic_clear"
        android:visibility="gone"/>


    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/edit_account"
        app:layout_constraintEnd_toEndOf="@id/edit_account"
        app:layout_constraintTop_toBottomOf="@id/edit_account"
        android:layout_marginTop="25dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:hint="@string/edit_password"
        android:maxLines="1"
        android:inputType="textPassword"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/img_show_hide"
        android:layout_width="25dp"
        android:layout_height="25dp"
        app:layout_constraintStart_toStartOf="@id/edit_password"
        app:layout_constraintBottom_toBottomOf="@id/edit_password"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_password"/>

    <TextView
        android:id="@+id/text_forget"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/edit_password"
        app:layout_constraintBottom_toBottomOf="@id/edit_password"
        android:layout_marginBottom="15dp"
        android:text="@string/text_forget"
        android:textColor="@color/text_password_forget"/>


    <Button
        android:id="@+id/butt_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/edit_password"
        app:layout_constraintEnd_toEndOf="@id/edit_password"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        android:layout_marginTop="25dp"
        android:background="@drawable/butt_login"
        android:text="@string/butt_login"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/text_visitor"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/butt_login"
        app:layout_constraintStart_toStartOf="@id/butt_login"
        android:layout_marginTop="20dp"
        android:text="@string/text_visitor"
        android:textColor="@color/text_visitor_register"
        android:gravity="center"/>

    <TextView
        android:id="@+id/text_register"
        android:layout_width="50dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/butt_login"
        app:layout_constraintEnd_toEndOf="@id/butt_login"
        android:layout_marginTop="20dp"
        android:text="@string/text_register"
        android:textColor="@color/text_visitor_register"
        android:gravity="center"/>

    <io.github.grooters.idles.view.widget.LoadingWidget
        android:id="@+id/text_loading"
        android:layout_width="80dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>